--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -72,7 +72,7 @@ span.flip-countdown-card-sec:hover {
 }
 
 .bg-img {
-    background-image: url('../../../public/images/namninhchida_1.png');
+    background-image: url('../../../public/images/trungquoc.jpeg');
     background-size: cover;
     height: 100vh;
     background-position: center;
